# Voidrun

./: .gitignore  API.md  COMPLETE_TYPESCRIPT_WORKFLOW.md  CONTAINER_LIFECYCLE_AND_FILE_TRANSFER.md  Cargo.toml  HOW_TO_USE.md  PROXY_SOLUTION.md  README.md  TYPESCRIPT_PROJECT_GUIDE.md  bun_dev_test.json  bun_simple_example.json  bun_simple_test.json  complex_bun_env.json  complex_bun_fs.json  config.toml  file_transfer_test.json  manage_typescript_project.sh  my_typescript_project.json  sandbox_id.txt  simple_test.js  working_deployment.json
.claude/: settings.local.json
.specstory/history/: 2025-07-11_09-20Z-understanding-faas-function-deployment-id.md
docs/: ADMIN_UI_DEMO.md  API.md  API.md.bak  HOW_TO_USE.md  faas_example.json  file_update_example.json  typescript_project_example.json
examples/: basic_usage.rs  direct_backend_test.rs
src/: config.rs  homepage.rs  lib.rs  main.rs
src/admin/: handlers.rs  mod.rs  ui.rs
src/api/: handlers.rs  mod.rs
src/faas/: handlers.rs  mod.rs
src/proxy/: mod.rs
src/runtime/: mod.rs
src/sandbox/: manager.rs  mod.rs
src/sandbox/backend/: docker.rs  mod.rs  nsjail.rs
tests/: TEST_RESULTS.md  backend_tests.rs  complex_bun_async.json  complex_bun_routing.json  integration_tests.rs  nsjail_integration_tests.rs  simple_file_test.json  simple_typescript_demo.json  test_request.json  test_sandbox.sh
